# G2P

./: .gitignore  README.md  config.py  corpus.txt  create_nex_data.py  data.py  hubconf.py  prepare_dic.py  pyproject.toml  requirements.txt  setup.cfg  test.py  train.py
g2p/: __init__.py  __main__.py  config.py  data.py  g2p.py
models/ru/: decoder_e100.pth  encoder_e100.pth
models/ru_2/: decoder_e10.pth  encoder_e10.pth
resources/ru/: Graphemes.json  Phonemes.json
resources/ru_1/: Lexicon.json  token.py
resources/ru_2/: token.py
