[metadata]
name = g2p-ru
version = 0.1.0
author = Gaivoronsky Alexander
author_email = lifami40@gmail.com
description = Grapheme to phoneme converter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kompotiks/G2P
project_urls =
    Bug Tracker = https://github.com/kompotiks/G2P/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: Ubuntu 20.04, Windows 10

[options]
package_dir =
    = g2p
packages = find:
python_requires = >=3.8

[options.packages.find]
where = g2p